--- a/src/views/retrieveMovie/css/default.css
+++ b/src/views/retrieveMovie/css/default.css
@@ -8,12 +8,13 @@
     display: inline-block;
     text-align: left;
     margin: 0px;
-    margin-left: 5px;
+    margin-left: 10px;
 }
 
 .movieImage {
     margin-right: 10px;
     margin-left: 5px;
+    height: 100px;
 }
 
 
