--- a/src/views/retrieveMovie/css/default.css
+++ b/src/views/retrieveMovie/css/default.css
@@ -15,6 +15,8 @@
     margin-right: 10px;
     margin-left: 5px;
     height: 100px;
+    border-radius: 5px;
+    box-shadow: 4px 4px #888888;
 }
 
 
