--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -1,13 +1,60 @@
 body {
     background: silver;
     font-family: 'Open Sans', serif;
+    margin: 0px;
+    ;
+}
+
+input {
+    border-radius: 5px;
+    border-style: solid;
+    border-color: transparent;
+    padding-left: 5px;
+}
+
+input:focus {
+    outline: 0;
+}
+
+.clickable {
+    border-radius: 5px;
+    border-style: solid;
+    cursor: pointer;
+    height: 25px;
+    text-align: center;
+}
+
+.clickable:focus {
+    outline: 0;
+    background: lightgrey;
+    border-color: gray;
+}
+
+.primary {
+    background: blue;
+    color: white;
+    border-color: transparent;
+}
+
+.primary:focus {
+    background: blue;
 }
 
 #header {
-    padding: 20px;
-    background: gold;
+    padding: 5px;
+    font-size: 16px;
+    text-align: left;
+    background: slateblue;
+    color: white;
 }
+
 #footer {
     font-size: 12px;
     text-align: right;
+    padding-right: 10px;
+    padding-bottom: 10px;
+}
+
+#title {
+    padding-left: 5px;
 }
