--- a/src/views/retrieveMovie/css/admin.css
+++ b/src/views/retrieveMovie/css/admin.css
@@ -13,3 +13,16 @@
     background: darkgreen;
     color: whitesmoke;
 }
+
+.createBtn {
+    position: fixed;
+    background: slateblue;
+    color: whitesmoke;
+    box-shadow: 5px 5px 5px grey;
+    font-weight: bold;
+    font-size: 20px;
+    height: 50px;
+    padding: 10px;
+    bottom: 10px;
+    right: 10px;
+}
