--- a/src/views/retrieveMovie/css/movie.css
+++ b/src/views/retrieveMovie/css/movie.css
@@ -11,6 +11,7 @@
 .movieImage {
     margin-right: 10px;
     margin-left: 5px;
+    width: 70px;
     height: 100px;
     border-radius: 5px;
     box-shadow: 4px 4px #888888;
