--- a/src/views/createMovie/css/default.css
+++ b/src/views/createMovie/css/default.css
@@ -38,3 +38,12 @@ td {
 .errorMessage {
     color: red
 }
+
+#ImageInput {
+    width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
