--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -9,6 +9,10 @@ body {
     ;
 }
 
+textarea {
+    font-family: 'Open Sans', serif;
+}
+
 input {
     border-radius: 5px;
     border-style: solid;
