--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -57,6 +57,7 @@ input:focus {
 }
 
 #header {
+    height: 27px;
     padding: 5px;
     font-size: 16px;
     text-align: left;
@@ -79,6 +80,23 @@ input:focus {
     bottom: 5px;
 }
 
-#title {
-    padding-left: 5px;
+.websiteTitle {
+    position: absolute;
+    left: 0;
+    top: 0;
+    color: lightgrey;
+    padding-top: 5px;
+    padding-left: 10px;
+    cursor: pointer;
+    width: 200px;
+    word-wrap: normal;
+}
+    
+.userPanel {
+    padding-top: 5px;
+    padding-bottom: 2px;
+    padding-right: 10px;
+    position: absolute;
+    right: 0px;
+    top: 0px;
 }
