--- a/src/views/createMovie/css/default.css
+++ b/src/views/createMovie/css/default.css
@@ -1,19 +1,19 @@
 #pageTitle {
     font-size: 28px;
+    margin-bottom: 0px;
 }
 
 #createMovieDiv {
     text-align: center;
 }
 
-#createMovieForm {
+.formInputDiv {
     text-align: left;
 }
 
-
-#formLabel {
-    display: inline;
-    text-align: right;
+.formLabel {
+    width: 100%;
+    text-align: left;
     font-size: 14px;
     padding-bottom: 2.5px;
     padding-right: 5px;
@@ -39,7 +39,6 @@ td>* {
 }
 
 .errorMessage {
-    margin-left: 5px;
     color: red;
     font-size: 12px;
 }
@@ -48,16 +47,17 @@ td>* {
     font-size: 12px;
     background: lightgrey;
     padding: 5px;
-    display: inline;
+    cursor: pointer;
 }
 
 .movieImage {
-    margin: 5px;
-    width: 70px;
-    height: 100px;
+    margin-top: 5px;
+    width: 333px;
+    height: 420px;
     border-radius: 5px;
     box-shadow: 4px 4px #888888;
     display: inline;
+    cursor: pointer;
 }
 
 
@@ -72,4 +72,20 @@ td>* {
 
 textarea {
     height: 100px;
+}
+
+#centerPane {
+    display: flex;
+    text-align: center;
+    width: 70%;
+    margin: 0 auto;
+}
+
+#rightPane {
+    padding-left: 20px;
+    height: 400px;
+}
+
+#bottomPane {
+    text-align: center;
 }
